--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,15 @@ This text file contains a list of everything that needs to be done before finali
     - staff page must also only be accessible via the login portal, redirect when
       the user has not logged in (i.e. pasting a URL into the search bar)
   - create framework for admin page
+  - Implement access levels for the staff login portal
+    - This allows admins and staff to log in with the same portal
+    - To do this, we must get the access level associated with the username from
+      the database.
+    - Once we have the access level, we need to redirect admins to the admin page
+      and staff to the staff page
+  - Timeouts
+    - if a staff member has been idle for more than X minutes (which can be set by the admin),
+      It will automatically log them out and send them to the home page
 
 # Server
 # These tasks involve making the website work with the server
@@ -31,8 +40,10 @@ This text file contains a list of everything that needs to be done before finali
 
   - use password hashing with the staff login information
   - limit attempted login attempts, and add a cool-down function
-  - make admin page only accessible via the URL, so that only experienced users,
-    such as an admin, have knowledge on how to access the login portal
+  - make admin page inaccessible to non-admins using the access level function
+    from the 'pages' section
+    - This can be done by recycling code from the staff page PHP code
+  - Preventing SQL injection attacks by cleansing data inputs
 
 # URGENT
 # These tasks need to be completed as soon as possible
