--- a/todo.txt
+++ b/todo.txt
@@ -12,8 +12,7 @@ This text file contains a list of everything that needs to be done before finali
 
   - create framework for staff page
     - staff page must be able to display data from the database
-    - staff page must also only be accessible via the login portal, redirect when
-      the user has not logged in (i.e. pasting a URL into the search bar)
+    - Add a a search area to the staff/admin sidebar
   - create framework for admin page
   - Link staff sign in system to the database
   - Timeouts
