--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,6 @@
 #!/bin/false
 This text file contains a list of everything that needs to be done before finalising the project
 
-# Page Looks
-# These tasks relate to how the page looks and are not too important
-
-  - Add error message for when sign in/out fields are left empty
-  - Add success message for when someone logs in to the system successfully
-
 # Pages
 # These tasks involve the creation of certain pages and their attributes
 
@@ -30,3 +24,5 @@ This text file contains a list of everything that needs to be done before finali
 
 # URGENT
 # These tasks need to be completed as soon as possible
+
+SELECT Users.UserID, Users.Forename, Users.Surname, (CASE WHEN UserID IN (SELECT DISTINCT UserID FROM Log WHERE EventID=?) THEN (SELECT Log.MinutesLate FROM Log WHERE Log.UserID=Users.UserID AND Log.EventID IS NOT NULL AND CAST(Log.LogTime AS DATE)=CURRENT_DATE ORDER BY LogID DESC LIMIT 1) ELSE NULL END) FROM Users ORDER BY Users.Forename ASC;
